--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -37,6 +37,7 @@ jobs:
         with:
           arguments: |
             build
+            --info
           properties: |
             org.gradle.caching=true
           gradle-version: wrapper
