--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -25,6 +25,8 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: 21
+      - name: Fetch all branches
+        run: git fetch --all
       - name: Cache konan
         uses: actions/cache@v4
         with:
