--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          # release workflow should have access to all tags
-          fetch-depth: 0
+          submodules: recursive # Clone all submodules, including nested ones
+          fetch-depth: 0        # Ensure the full history is fetched
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
