--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,44 +22,56 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          # Clone all submodules, including nested ones (needed for tests)
           submodules: recursive
-          # Ensure the full history is fetched
           fetch-depth: 0
+
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: 21
+
+      - name: Extract version from branch name
+        id: extract_version
+        run: |
+          BRANCH_NAME="${GITHUB_REF#refs/heads/release/}"
+          TAG_NAME="v${BRANCH_NAME}"
+
       - name: Status git before
         run: git status
+
       - uses: burrunan/gradle-cache-action@v1
         with:
           gradle-version: wrapper
-      # Until https://github.com/burrunan/gradle-cache-action/issues/42 is addressed, gradle should be run as a separate step
-      - name: gradle release from tag
-        run: ./gradlew            
-          --console=rich
-          -Prelease
-          -PgprUser=${{ github.actor }}
-          -PgprKey=${{ secrets.GITHUB_TOKEN }}
-          publishToSonatype
+
+      - name: Gradle release from tag
+        run: ./gradlew --console=rich -Prelease -PgprUser=${{ github.actor }} -PgprKey=${{ secrets.GITHUB_TOKEN }} publishToSonatype
+
       - name: Status git after
         if: ${{ always() }}
         run: git status
 
-    github_release:
-      needs: release
-      name: Create Github Release
-      runs-on: ubuntu-latest
-      steps:
-        - name: Create Github Release
-          id: create_release
-          uses: actions/create-release@v1
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          with:
-            tag_name: ${{ github.ref }}
-            release_name: Release ${{ github.ref }}
-            draft: false
-            prerelease: false
+  github_release:
+    needs: central_release
+    name: Create Github Release
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Extract version from branch name
+        id: extract_version
+        run: |
+          BRANCH_NAME="${GITHUB_REF#refs/heads/release/}"
+          TAG_NAME="v${BRANCH_NAME}"
+
+      - name: Create Github Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ env.TAG_NAME }}
+          release_name: Release ${{ env.TAG_NAME }}
+          draft: false
+          prerelease: false
