CI updates and fixes
### What's done:
- Added Github releases to CI

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           gradle-version: wrapper
 
-      - name: Gradle release from tag
+      - name: Gradle release to Sonatype
         run: ./gradlew --console=rich -Prelease -PgprUser=${{ github.actor }} -PgprKey=${{ secrets.GITHUB_TOKEN }} publishToSonatype
 
       - name: Status git after
