Removed logger and replaced it with simple `println` to avoid a clash with thousands of libs and platforms and their versions
### What's done:
- Our configuration already got clashes with old versions of Spring + log4j
- Same with Quarkus

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,4 +8,4 @@ kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-plugin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 
 [libraries]
-jgit = { module = "org.eclipse.jgit:org.eclipse.jgit", version.ref = "jgit"}å
+jgit = { module = "org.eclipse.jgit:org.eclipse.jgit", version.ref = "jgit"}
